Add timer and game element.

--- a/game.html
+++ b/game.html
@@ -6,13 +6,13 @@
          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    
-   <title>Red de motten</title>
+   <title>Dood de motten</title>
    
    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <!-- Kill Counter -->
-<div id="kill-counter">Kills: 0</div>
+<div id="kill-counter">Aantal gedood: 0</div>
 
 <!-- Glow -->
 <div class="glow"></div>
